Fix for small images dribbble spacing

--- a/dev/style/sass/partials/_dribbble.scss
+++ b/dev/style/sass/partials/_dribbble.scss
@@ -36,7 +36,7 @@
   border-top: none;
 
   &:not(:last-of-type) {
-    margin-bottom: 4px;
+    margin-bottom: 2px;
   }
 
   .dr-story-url {
